- HighScores and end of game now works correctly
- Changed some lines in HighScoreManager
- integrated HighScoreManager in MinesweeperTerminal, so it works now, additionally it displays if you have won or lost

Warning: Schwierigkeit "Leicht" is still in "test", so there only is a 4x4 field with 1 mine, for easy testing